Aug 11, 2013 - chris ---------------------------------------------------
                      release of hamsterdb-2.1.2

Aug 06, 2013 - chris ---------------------------------------------------
o issue #25: tcmalloc is now disabled on MacOS

Jul 21, 2013 - chris ---------------------------------------------------
o Added new configure option --without-tcmalloc
o issue #23, #25: Fixed linking problems regarding tcmalloc_minimal.so
	(Thanks, Johnathan Conley and brancaleone)

Jul 19, 2013 - chris ---------------------------------------------------
o issue #24: Fixed compilation problem on MacOS (Thanks, Johnathan Conley)

Jul 15, 2013 - chris ---------------------------------------------------
o ham_env_close now truncates the file size and removes unused pages at the
	end of the file

Jun 27, 2013 - chris ---------------------------------------------------
o issue #17: configure.in checks now for (hopefully) correct boost version

Jun 26, 2013 - chris ---------------------------------------------------
o Added tracking of internal metrics, exported via ham_env_get_metrics
	(declared in ham/hamsterdb_int.h)

Jun 25, 2013 - chris ---------------------------------------------------
o added support for AES encryption

Jun 23, 2013 - chris ---------------------------------------------------
                      release of hamsterdb-2.1.1

Jun 14, 2013 - chris ---------------------------------------------------
o Removed internal (but exported) functions ham_env_get_device,
	ham_env_set_device

Jun 10, 2013 - chris ---------------------------------------------------
o Improved integration of tcmalloc, removed ham_env_set_allocator

Jun 05, 2013 - chris ---------------------------------------------------
o A small semantic change: when retrieving partial records with
	ham_db_find or ham_cursor_find, the partial size is now stored in
	record.partial_size and the original size is stored in record.size.
	Previously, the partial size was stored in record.size.
