@@ -38,7 +38,7 @@ public class DatabaseTest extends TestCase {
   }
 
   public void testGetVersion() {
-    Version v=Database.getVersion();
+    Version v = Database.getVersion();
     assertEquals(2, v.major);
     assertEquals(1, v.minor);
   }
