@@ -1,8 +1,16 @@
-Aug 11, 2013 - chris ---------------------------------------------------
+Aug 23, 2013 - chris ---------------------------------------------------
                       release of hamsterdb-2.1.2
+
+Aug 21, 2013 - chris ---------------------------------------------------
+o Fixed spurious failures of the java unittests
 
 Aug 06, 2013 - chris ---------------------------------------------------
 o issue #25: tcmalloc is now disabled on MacOS
+
+Jul 24, 2013 - chris ---------------------------------------------------
+o Rewrote client/server implementation
+	- using libuv instead of mongoose
+	- using tcp instead of http (and removing the dependency to libcurl)
 
 Jul 21, 2013 - chris ---------------------------------------------------
 o Added new configure option --without-tcmalloc
